--- a/TicketManagement.Web/Components/Layout/NavMenu.razor
+++ b/TicketManagement.Web/Components/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿@using TicketManagement.Web.Services
+﻿@using TicketManagement.Web.Client.Services
 @using Microsoft.AspNetCore.Components.Authorization
 @inject NotificationHubService NotificationHub
 @inject TicketManagementApiClient ApiClient
