--- a/TicketManagement.Web/Components/Pages/ProjectMembers.razor
+++ b/TicketManagement.Web/Components/Pages/ProjectMembers.razor
@@ -1,5 +1,5 @@
 @page "/projects/{ProjectId:guid}/members"
-@using TicketManagement.Web.Services
+@using TicketManagement.Web.Client.Services
 @using TicketManagement.Contracts.DTOs
 @using TicketManagement.Core.Enums
 @inject TicketManagementApiClient ApiClient
