--- a/TicketManagement.Web/Components/_Imports.razor
+++ b/TicketManagement.Web/Components/_Imports.razor
@@ -9,3 +9,5 @@
 @using Microsoft.JSInterop
 @using TicketManagement.Web
 @using TicketManagement.Web.Components
+@using TicketManagement.Web.Client
+@using TicketManagement.Web.Client.Services
