--- a/TicketManagement.Web/Components/App.razor
+++ b/TicketManagement.Web/Components/App.razor
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="@Assets["TicketManagement.Web.styles.css"]" />
     <ImportMap />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <HeadOutlet />
+    <HeadOutlet @rendermode="InteractiveServer" />
 </head>
 
 <body>
-    <Routes />
+    <Routes @rendermode="InteractiveServer" />
     <script src="@Assets["lib/bootstrap/dist/js/bootstrap.bundle.min.js"]"></script>
     <script src="@Assets["_framework/blazor.web.js"]"></script>
 </body>
