--- a/TicketManagement.Web/Components/Pages/AddOrganizationMember.razor
+++ b/TicketManagement.Web/Components/Pages/AddOrganizationMember.razor
@@ -1,5 +1,5 @@
 @page "/organizations/{organizationId:guid}/members/add"
-@using TicketManagement.Web.Services
+@using TicketManagement.Web.Client.Services
 @using TicketManagement.Contracts.DTOs
 @using Microsoft.Extensions.Logging
 @using Microsoft.AspNetCore.Components.Authorization
@@ -9,7 +9,6 @@
 @inject ILogger<AddOrganizationMember> Logger
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @attribute [Authorize]
-@rendermode InteractiveServer
 
 <PageTitle>Add Member - @(organization?.DisplayName ?? "Organization") - Ticket Management</PageTitle>
 
