--- a/TicketManagement.Web/Components/Pages/EditOrganizationMember.razor
+++ b/TicketManagement.Web/Components/Pages/EditOrganizationMember.razor
@@ -1,5 +1,5 @@
 @page "/organizations/{organizationId:guid}/members/{userId}/edit"
-@using TicketManagement.Web.Services
+@using TicketManagement.Web.Client.Services
 @using TicketManagement.Contracts.DTOs
 @using Microsoft.Extensions.Logging
 @using Microsoft.AspNetCore.Components.Authorization
@@ -9,7 +9,6 @@
 @inject ILogger<EditOrganizationMember> Logger
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @attribute [Authorize]
-@rendermode InteractiveServer
 
 <PageTitle>Edit Member - @(organization?.DisplayName ?? "Organization") - Ticket Management</PageTitle>
 
