--- a/TicketManagement.Web/Components/Pages/Notifications.razor
+++ b/TicketManagement.Web/Components/Pages/Notifications.razor
@@ -1,5 +1,5 @@
 ﻿@page "/notifications"
-@using TicketManagement.Web.Services
+@using TicketManagement.Web.Client.Services
 @using TicketManagement.Contracts.DTOs
 @inject TicketManagementApiClient ApiClient
 @inject NavigationManager Navigation
