--- a/TicketManagement.Web/Components/Pages/OrganizationDetail.razor
+++ b/TicketManagement.Web/Components/Pages/OrganizationDetail.razor
@@ -1,5 +1,5 @@
 @page "/organizations/{organizationId:guid}"
-@using TicketManagement.Web.Services
+@using TicketManagement.Web.Client.Services
 @using TicketManagement.Contracts.DTOs
 @using Microsoft.Extensions.Logging
 @using Microsoft.AspNetCore.Components.Authorization
@@ -9,7 +9,6 @@
 @inject ILogger<OrganizationDetail> Logger
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @attribute [Authorize]
-@rendermode InteractiveServer
 
 <PageTitle>@(organization?.DisplayName ?? "Organization") - Ticket Management</PageTitle>
 
