--- a/TicketManagement.Web/Components/Pages/OrganizationSettings.razor
+++ b/TicketManagement.Web/Components/Pages/OrganizationSettings.razor
@@ -1,5 +1,5 @@
 @page "/organizations/{organizationId:guid}/settings"
-@using TicketManagement.Web.Services
+@using TicketManagement.Web.Client.Services
 @using TicketManagement.Contracts.DTOs
 @using Microsoft.Extensions.Logging
 @using Microsoft.AspNetCore.Components.Authorization
@@ -9,7 +9,6 @@
 @inject ILogger<OrganizationSettings> Logger
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @attribute [Authorize]
-@rendermode InteractiveServer
 
 <PageTitle>Settings - @(organization?.DisplayName ?? "Organization") - Ticket Management</PageTitle>
 
