--- a/TicketManagement.Web/Components/Pages/Organizations.razor
+++ b/TicketManagement.Web/Components/Pages/Organizations.razor
@@ -1,5 +1,5 @@
 @page "/organizations"
-@using TicketManagement.Web.Services
+@using TicketManagement.Web.Client.Services
 @using TicketManagement.Contracts.DTOs
 @using Microsoft.Extensions.Logging
 @using Microsoft.AspNetCore.Components.Authorization
@@ -9,7 +9,6 @@
 @inject ILogger<Organizations> Logger
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @attribute [Authorize]
-@rendermode InteractiveServer
 
 <PageTitle>Organizations - Ticket Management</PageTitle>
 
