--- a/TicketManagement.Web/Components/Pages/Projects.razor
+++ b/TicketManagement.Web/Components/Pages/Projects.razor
@@ -1,5 +1,5 @@
 ﻿@page "/projects"
-@using TicketManagement.Web.Services
+@using TicketManagement.Web.Client.Services
 @using TicketManagement.Contracts.DTOs
 @using Microsoft.Extensions.Logging
 @using Microsoft.AspNetCore.Components.Authorization
@@ -9,7 +9,6 @@
 @inject ILogger<Projects> Logger
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @attribute [Authorize]
-@rendermode InteractiveServer
 
 <PageTitle>Projects - Ticket Management</PageTitle>
 
