--- a/TicketManagement.Web/Components/Shared/OrganizationSelector.razor
+++ b/TicketManagement.Web/Components/Shared/OrganizationSelector.razor
@@ -1,4 +1,4 @@
-@using TicketManagement.Web.Services
+@using TicketManagement.Web.Client.Services
 @using TicketManagement.Contracts.DTOs
 @using Microsoft.Extensions.Logging
 @using Microsoft.AspNetCore.Components.Authorization
@@ -6,7 +6,6 @@
 @inject ILogger<OrganizationSelector> Logger
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject IJSRuntime JSRuntime
-@rendermode InteractiveServer
 
 <div class="dropdown">
     <button class="btn btn-outline-primary dropdown-toggle" type="button" id="organizationDropdown" data-bs-toggle="dropdown" aria-expanded="false">
